--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 database:
   host: "db_host"
-  port: "db_port"
+  # Default port is 3306 in MySQL, change if you are using a different port
+  port: 3306
   username: "db_username"
   password: "db_password"
   database: "db_name"
@@ -12,7 +13,7 @@ messages:
   consoleError: "&cYou can't execute this command from console"
   Error: "&cAn error occurred while executing the command. Please contact an administrator"
   noLink: "&cYou haven't set the link yet"
-  livemessage:
+  golive:
     - "&8&l---------------------------------\n"
     - "&5%player% &7is going live\n"
     - "&8follow the live stream at\n"
