--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,9 +13,12 @@ messages:
   consoleError: "&cYou can't execute this command from console"
   Error: "&cAn error occurred while executing the command. Please contact an administrator"
   noLink: "&cYou haven't set the link yet"
+  noDB: "&cPlease configure the database in the config.yml file"
+  setLinkUsage: "&cUse: /setlink <link>"
+  reload: "&8The configuration has been reloaded"
   golive:
-    - "&8&l---------------------------------\n"
-    - "&5%player% &7is going live\n"
-    - "&8follow the live stream at\n"
-    - "&6%link%\n"
-    - "&8&l---------------------------------\n"
+    - "&8&l---------------------------------"
+    - "&5%player% &7is going live"
+    - "&8follow the live stream at"
+    - "&6%link%"
+    - "&8&l---------------------------------"
